--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,8 @@ jobs:
         local-dir: ./dist/
         server-dir: /public_html/
         dangerous-clean-slate: true
+                dangerous-clean-slate: true
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
