Update deployment scripts and build artifacts

--- a/package.json
+++ b/package.json
@@ -45,16 +45,19 @@
     "@sentry/react": "^10.38.0",
     "@sentry/tracing": "^7.120.4",
     "@supabase/supabase-js": "^2.95.3",
+    "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "form-data": "^4.0.5",
     "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.2",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
